# Tarea2_Joan_Definitiva2

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/joan/tarea2_joan/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Animation - 1716423358152.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/joan/tarea2_joan/: MainActivity.java  ResultadosActivity.java
app/src/main/res/layout/: activity_main.xml  activity_resultados.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/joan/tarea2_joan/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
